[package]
authors = ["pleme-io"]
description = "lava-chart — typed (deflava-chart …) for fully-declarative Helm chart authoring in tatara-lisp. Chart metadata + values schema + manifest templates declared as one typed value; the renderer emits Chart.yaml + values.yaml + templates/*.yaml. No hand-authored YAML."
edition = "2024"
license = "MIT"
name = "lava-chart"
readme = "README.md"
repository = "https://github.com/pleme-io/lava-chart"
version = "0.1.0"

[lib]
name = "lava_chart"
path = "src/lib.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
lava-eval = { git = "https://github.com/pleme-io/lava-eval", branch = "main" }
